--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,4 +3,13 @@ name = "oa-meet"
 version = "0.1.0"
 edition = "2024"
 
+# Enable a small amount of optimization in the dev profile.
+[profile.dev]
+opt-level = 1
+
+# Enable a large amount of optimization in the dev profile for dependencies.
+[profile.dev.package."*"]
+opt-level = 3
+
 [dependencies]
+bevy = "0.17" # make sure this is the latest version
